@@ -5,6 +5,8 @@ x.x:
 
 - added: normalize all URL's in the outgoing mail
 - added: option to embed images directly in the outgoing e-mail #20
+- added: option to send the test page to email
+- changed: test page uses inline CSS, normalized urls and embedded images
 
 3.0 (2014-09-25):
 
